# securechat

./: .gitignore  BUILD_WINDOWS.md  CI_CD.md  CONTRIBUTING.md  LICENSE  QUICK_START_WINDOWS.md  README.md  SECURITY.md  START_HERE_WINDOWS.md  build-all.ps1  build-and-push.bat  build-fixed.bat  build-gnu.bat  build-mingw.bat  build.bat  build.sh  push-to-github.bat  setup-github-auth.bat  setup-windows.ps1
.github/workflows/: build.yml
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/securechat/: MainActivity.kt  SecureChatManager.kt
android/app/src/main/java/com/securechat/crypto/: CryptoManager.kt
android/app/src/main/java/com/securechat/protocol/: Protocol.kt
android/app/src/main/java/com/securechat/ui/screens/: AuthScreen.kt  ChatScreen.kt  SplashScreen.kt
android/app/src/main/java/com/securechat/ui/theme/: Theme.kt  Type.kt
android/app/src/main/java/com/securechat/viewmodel/: AuthViewModel.kt  ChatViewModel.kt
android/app/src/main/res/values/: strings.xml
core/: Cargo.toml
core/src/: crypto.rs  lib.rs  network.rs  protocol.rs  storage.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: index.html  main.js  package.json
desktop/src-tauri/src/: main.rs
