[package]
name = "securechat-core"
version = "0.1.0"
edition = "2021"
authors = ["SecureChat Team"]
description = "Core library for SecureChat - E2E encrypted messaging"
license = "GPL-3.0"

[dependencies]
# Cryptography
aes-gcm = "0.10"
aes = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets", "getrandom"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hkdf = "0.12"
argon2 = { version = "0.5", features = ["password-hash", "alloc"] }
chacha20poly1305 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"

# Storage
sled = "0.34"

# Networking
libp2p = { version = "0.54", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "gossipsub", "mdns", "quic"] }
async-std = { version = "1.12", features = ["attributes"] }
futures = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# Logging
log = "0.4"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"
