[package]
name = "securechat-desktop"
version = "0.1.0"
description = "SecureChat Desktop Application"
authors = ["SecureChat Team"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Core library
securechat-core = { path = "../core" }

# Tauri
tauri = { version = "1.6", features = ["shell-open"] }
tauri-plugin-window-state = { version = "0.1" }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
log = "0.4"
tauri-plugin-log = { version = "0.1", features = ["colored"] }

# Directories
directories = "5.0"

# Time
time = { version = "0.3", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
